# mvtool-tui

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs  updater.rs
src/objects/: component.rs  configure.rs  mod.rs  project.rs  script.rs
src/ui/: mod.rs
src/ui/checkbox/: checkbox.rs  checkbox_state.rs  group.rs  layout.rs  mod.rs
src/ui/messagebox/: messagebox.rs  mod.rs
src/ui/messagelog/: messagelog.rs  mod.rs
src/ui/spin/: mod.rs  spin.rs
src/utils/: mod.rs  utils.rs
