# Cargo.toml
[package]
name = "mvtool"
version = "1.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["blocking"] }
self-replace = "1.5.0"
tar = "0.4.44"
flate2 = "1.1.9"
semver = "1.0.27"